Fix to folders on mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -581,7 +581,7 @@
 .no-touch {
     .extendednavigation .navigation-item {
        // Hides JS toggle open
-        &.folder-open .navigation-list--children {
+        &.open .navigation-list--children {
             display: none;
         }
         // Activates hover state open
@@ -602,7 +602,7 @@
     }
 
     // Activates JS toggle open
-    &.folder-open .navigation-list--children {
+    &.open .navigation-list--children {
         display: block;
         width: 100%;
     }
